fix(FEC-14599): Adjust ivq items spacing (#172)

--- a/src/components/ivq-overlay/ivq-overlay.scss
+++ b/src/components/ivq-overlay/ivq-overlay.scss
@@ -18,8 +18,8 @@
     overflow: hidden;
   }
   :focus {
-    outline: 1px solid var(--playkit-tab-focus-color) !important;
-    outline-offset: 2px;
+    outline: 2px solid var(--playkit-tab-focus-color) !important;
+    outline-offset: 2px !important;
     box-shadow: 0 0 0 2px #FFFFFF, 0 0 0 4px var(--playkit-tab-focus-color);
     border-radius: 4px;
   }
