--- a/src/components/quiz-review/question-list-review/question-list-review.scss
+++ b/src/components/quiz-review/question-list-review/question-list-review.scss
@@ -28,6 +28,7 @@
       display: flex;
       flex-direction: column;
       width: 100%;
+      margin: 4px;
       @include outline-fix;
       .reviewAnswer {
         @include optional-answer;
