--- a/src/theme.scss
+++ b/src/theme.scss
@@ -85,6 +85,7 @@ $selection-border-width: 2px;
   height: 32px;
   align-items: center;
   padding: 5px 16px;
+  margin: 4px;
 
   background: $button-background;
   border-style: solid;
